[package]
name = "check-membership"
version = "0.1.0"
authors = ["4meta5"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]

[dependencies]
parity-scale-codec = { version = "1.1.0", features = ["derive"], default-features = false }
frame-support = { rev = '1d8fa432949b99fac4ea0bebfdd6675dee973aa1', git = 'https://github.com/paritytech/substrate.git', default_features = false }
frame-system = { rev = '1d8fa432949b99fac4ea0bebfdd6675dee973aa1', git = 'https://github.com/paritytech/substrate.git', default_features = false}
sp-runtime = { rev = '1d8fa432949b99fac4ea0bebfdd6675dee973aa1', git = 'https://github.com/paritytech/substrate.git', default_features = false }
sp-core = { rev = '1d8fa432949b99fac4ea0bebfdd6675dee973aa1', git = 'https://github.com/paritytech/substrate.git', default_features = false }
sp-std = { rev = '1d8fa432949b99fac4ea0bebfdd6675dee973aa1', git = 'https://github.com/paritytech/substrate.git', default_features = false }
