[package]
name = "check-membership"
version = "2.0.0-dev"
authors = ["4meta5"]
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates permissioned methods"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-dev"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '12e08fd25455053e3cedc8b19beb7e77330a5713', default-features = false }
frame-system = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '12e08fd25455053e3cedc8b19beb7e77330a5713', default-features = false}
sp-runtime = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '12e08fd25455053e3cedc8b19beb7e77330a5713', default-features = false }
sp-core = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '12e08fd25455053e3cedc8b19beb7e77330a5713', default-features = false }
sp-std = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '12e08fd25455053e3cedc8b19beb7e77330a5713', default-features = false }
