[package]
name = "child-trie"
version = "2.0.0-alpha.7"
authors = ["4meta5"]
edition = "2018"
license = "GPL-3.0-or-later"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'system/std',
    'runtime-primitives/std',
]


[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '1.3.0'

[dependencies.frame-support]
default_features = false
version = '2.0.0-alpha.7'

[dependencies.system]
default_features = false

package = 'frame-system'
version = '2.0.0-alpha.7'

[dependencies.runtime-primitives]
default_features = false

package = 'sp-runtime'
version = '2.0.0-alpha.7'

[dependencies.rstd]
default_features = false

package = 'sp-std'
version = '2.0.0-alpha.7'

[dependencies.primitives]
default_features = false

package = 'sp-core'
version = '2.0.0-alpha.7'
