[package]
name = "compounding-interest"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A savings account that uses fixed point arithmetic to implement compounding interest"
license = "GPL-3.0-or-later"

[dependencies]
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', branch = "master" }
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-arithmetic = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }

[dev-dependencies]
serde = '1.0'

# Substrate packages
sp-core = '3.0'
sp-io = '3.0'

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'sp-std/std',
]
