[package]
name = "constant-config"
version = "2.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A pallet that demonstrates constants declared in the configuration trait"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0"

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }

# Substrate packages

frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }

[dev-dependencies]
# Substrate packages
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-runtime/std',
]

