[package]
name = "currency-imbalances"
version = "0.1.0"
authors = ["4meta5"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'support/std',
    'system/std',
    'balances/std',
    'runtime-primitives/std',
]

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '1.0.6'

[dependencies.support]
default_features = false

package = 'frame-support'
version = '2.0.0-alpha.5'

[dependencies.system]
default_features = false

package = 'frame-system'
version = '2.0.0-alpha.5'

[dependencies.balances]
default_features = false

package = 'pallet-balances'
version = '2.0.0-alpha.5'

[dependencies.runtime-primitives]
default_features = false

package = 'sp-runtime'
version = '2.0.0-alpha.5'

[dev-dependencies.primitives]
default_features = false

package = 'sp-core'
version = '2.0.0-alpha.5'

[dev-dependencies.runtime-io]
default_features = false

package = 'sp-io'
version = '2.0.0-alpha.5'
