[package]
name = "default-instance"
version = "2.0.0-rc5"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "An instantiable pallet featuring deafult instance"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc5"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
frame-support = { version = '2.0.0-rc5', default-features = false }
frame-system = { version = '2.0.0-rc5', default-features = false }
sp-runtime = { version = '2.0.0-rc5', default-features = false }
sp-core = { version = '2.0.0-rc5', default-features = false }

[dev-dependencies]
sp-io = { version = '2.0.0-rc5', default-features = false }
