[package]
name = "double-map"
version = "0.1.0"
authors = ["4meta5"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '1.1.0'

[dependencies.frame-support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'

[dependencies.frame-system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'

[dependencies.sp-runtime]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'

[dependencies.sp-std]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'

[dev-dependencies.sp-core]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'

[dev-dependencies.sp-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7c751574d8c53108e78440bfa5dffb80ab644972'
