[package]
name = "double-map"
version = "2.0.0-rc6"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates using a double map in Substrate"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc6"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'jimmy/instant-seal-heartbeat', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'jimmy/instant-seal-heartbeat', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'jimmy/instant-seal-heartbeat', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'jimmy/instant-seal-heartbeat', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'jimmy/instant-seal-heartbeat', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'jimmy/instant-seal-heartbeat', default-features = false }
