[package]
name = "execution-schedule"
version = "2.0.0-alpha.6"
authors = ["4meta5"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '1.3.0'

[dependencies.frame-support]
default_features = false

version = '2.0.0-alpha.6'

[dependencies.frame-system]
default_features = false

version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
default_features = false

version = '2.0.0-alpha.6'

[dependencies.sp-std]
default_features = false

version = '2.0.0-alpha.6'

[dev-dependencies]
rand = "0.7.2"
sp-core = { default_features = false, version = '2.0.0-alpha.6' }
sp-io = { default_features = false, version = '2.0.0-alpha.6' }
