[package]
name = "execution-schedule"
version = "2.0.0-rc4"
repository = 'https://github.com/substrate-developer-hub/recipes'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates scheduling calls for future dispatch"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc4"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '2.0.0-rc4', default-features = false }
frame-system = { version = '2.0.0-rc4', default-features = false }
sp-runtime = { version = '2.0.0-rc4', default-features = false }
sp-std = { version = '2.0.0-rc4', default-features = false }

[dev-dependencies]
rand = "0.7.2"
sp-core = { version = '2.0.0-rc4', default-features = false }
sp-io = { version = '2.0.0-rc4', default-features = false }
