[package]
name = "fixed-point"
version = "2.0.0-rc6"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
description = "A pallet that demonstrates using fixed-point arithmetic in Substrate"
license = "GPL-3.0-or-later"
repository = "https://github.com/substrate-developer-hub/recipes"

[package.metadata.substrate]
categories = [
	"fixed point",
	"tutorial",
	"recipe",
	"arithmetic",
]
compatibility_version = "2.0.0-rc6"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'sp-runtime/std',
    'sp-std/std',
]

[dependencies]
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', tag = "v0.5.4+sub_v0.1" }
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
