[package]
name = "fixed-point"
version = "2.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = "A pallet that demonstrates using fixed-point arithmetic in Substrate"
repository = "https://github.com/substrate-developer-hub/recipes"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"fixed point",
	"tutorial",
	"recipe",
	"arithmetic",
]
compatibility_version = "2.0.0"

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', tag = "v0.5.4+sub_v0.1" }

# Substrate packages

frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-arithmetic = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }

[dev-dependencies]
sp-io = { version = '2.0.0', default-features = false }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'sp-std/std',
]
