[package]
name = "fixed-point"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = "A pallet that demonstrates using fixed-point arithmetic in Substrate"
repository = "https://github.com/substrate-developer-hub/recipes"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', rev = "b33d186888c60f38adafcfc0ec3a21aab263aef1" }

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-arithmetic = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }

[dev-dependencies]
sp-io = '3.0'
serde = '1.0'

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'sp-std/std',
]
