[package]
name = "generic-event"
version = "0.1.0"
authors = ["4meta5"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'system/std',
    'sp-runtime/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { package = "frame-support", version = '2.0.0-alpha.5', default_features = false }
system = { package = "frame-system", version = '2.0.0-alpha.5', default_features = false }
sp-runtime = { version = '2.0.0-alpha.5', default_features = false }

[dev-dependencies]
sp-core = { version = '2.0.0-alpha.5', default_features = false }
sp-io = { version = '2.0.0-alpha.5', default_features = false }
