[package]
name = "generic-event"
version = "2.0.0-rc6"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that raises events encapsulating data types from the configuration trait"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc6"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality', default-features = false }
