[package]
name = "hello-substrate"
version = "2.0.0-rc4"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates printing output the a node's console"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc4"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
]

[dependencies]
parity-scale-codec = { version = '1.3.0', features = ['derive'], default-features = false}
frame-support = { version = '2.0.0-rc4', default-features = false }
frame-system = { version = '2.0.0-rc4', default-features = false }
sp-runtime = { version = '2.0.0-rc4', default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0-rc4', default-features = false }
sp-io = { version = '2.0.0-rc4', default-features = false }
