[package]
name = "hello-substrate"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A pallet that demonstrates printing output the a node's console"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = '2.0', features = ['derive'], default-features = false}

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }

[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'
serde = '1.0'

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-runtime/std',
]
