[package]
name = "last-caller"
version = "2.0.0-alpha.6"
authors = ["Joshy"]
edition = "2018"
license = "GPL-3.0-or-later"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
frame-support = { default_features = false, version = '2.0.0-alpha.6' }
frame-system = { default_features = false, version = '2.0.0-alpha.6' }
sp-runtime = { default_features = false, version = '2.0.0-alpha.6' }
sp-core = { default_features = false, version = '2.0.0-alpha.6' }

[dev-dependencies]
sp-io = { default_features = false, version = '2.0.0-alpha.6' }
